// Copyright 2021 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package tests.example.message.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/go-leo/gors/example/api/tests/example/v1;example";

service Messaging {
  rpc GetMessages(GetMessageRequest) returns (Message) {
    option (google.api.http) = {
      get : "/v1/messages/list"
    };
  }

  rpc GetMessage(GetMessageRequest) returns (Message) {
    option (google.api.http) = {
      get : "/v1/messages/{message_id}"
    };
  }

  rpc CreateMessage(Message) returns (Message) {
    option (google.api.http) = {
      post : "/v1/messages/{message_id}"
      body : "*"
    };
  }

  rpc UpdateMessage(Message) returns (Message) {
    option (google.api.http) = {
      patch : "/v1/messages/{message_id}"
      body : "content"
    };
  }

  rpc StreamRequest(stream Message) returns ( Message);
  rpc StreamResponse(Message) returns (stream Message);
  rpc Stream(stream Message) returns (stream Message);
}

message GetMessageRequest {
  string message_id = 1;
  uint64 user_id = 2;
  repeated string tags = 3;
}

message Message {
  // 消息id
  string message_id = 1;
  // 用户id
  uint64 user_id = 2;
  string content = 3;
  optional string maybe = 4;
  repeated string tags = 5;
  google.protobuf.FieldMask update_mask = 6;
}